--- a/styles.css
+++ b/styles.css
@@ -662,6 +662,21 @@ textarea:focus {
   object-fit: cover;
   border-radius: 16px;
 }
+@media (max-width: 700px) {
+  .about-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-photo {
+    margin-bottom: 16px;
+  }
+
+  .about-photo img {
+    width: 140px;
+    height: 140px;
+  }
+}
 
 
 
